task text bug fixed and cards spacing improved

--- a/src/index.css
+++ b/src/index.css
@@ -98,9 +98,9 @@
     flex-direction: column;
     justify-content: center;
     border-radius: 10px;
+    margin: 13px 0;
     align-items: flex-start;
     position: relative;
-    padding-left: 0;
 }
 .card-light--shadows{
     box-shadow: 0 0 14px rgba(0, 0, 0, .300);
